# geraldine

./: README.md  build.sh  pyproject.toml  util.py
clutter/: old_code.py
geraldine/: GeriConfigManager.py  GeriStateManager.py  cli.py  frontmatter.jinja.html  main.py  main.py.save  primary.py  processor.py  util.py
geraldine/bin_x/: geri
geraldine/examples/geri_test/geri_src/test1/: test.jinja.html
geraldine/examples/geri_test/geri_src/test2/: test.jinja.html
geraldine/plugins/: 5e_tools_item_tag.plugin.py  add_indent.plugin.py  jinja_file_parser.plugin.py  jinja_parser.plugin.py  passthrough_processor.plugin.py  remove_blank_lines.plugin.py  simple_processor.plugin.py
geraldine/post_process/: file_appender.plugin.py
