[tool.poetry]
name = "geraldine"
version = "0.1.0"
description = ""
authors = ["0foo <0foo@0foo.dev>"]
keywords = ["static", "content", "generator"]
readme = "README.md"


[tool.poetry.scripts]
geri = "geraldine.cli:run"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.1"
jinja2 = "3.1.2"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
